PCDialer w/ Jade and MongoDB
softphone

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    .softphone
+      iframe(allow="camera *; microphone *" src="https://apps.mypurecloud.com/crm/index.html?crm=framework-local-secure&color=darkgrey", frameborder="0")
