--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,4 @@ html
   body
     block content
     .softphone
-      iframe(allow="camera *; microphone *" src="https://apps.mypurecloud.com/crm/index.html?crm=framework-local-secure&color=darkgrey", frameborder="0")
+      iframe(id="softphone" allow="camera *; microphone *" src="https://apps.mypurecloud.com/crm/index.html?crm=framework-local-secure&color=darkgrey", frameborder="0")
