--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
   width: 200;
   height: 450px;
   position: fixed;
-  top: 10px;
+  top: 70px;
   right: 10px;
 }
 
@@ -19,4 +19,38 @@ body {
 
 a {
   color: #00B7FF;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th, td {
+  padding: 5px;
+  text-align: center;
+}
+
+input {
+  padding: 5px;
+  margin: 5px;
+}
+
+html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
+.w3-sidebar {
+  z-index: 3;
+  width: 250px;
+  top: 70px;
+  bottom: 0;
+  height: inherit;
+}
+
+#myFooter{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 105px;
 }
