--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,36 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  div
-    a(href="contactlist")= "Contact List"
+  title title
+  link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
+  link(rel='stylesheet', href='https://www.w3schools.com/lib/w3-theme-black.css')
+  link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto')
+  link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+  body    
+    #myOverlay.w3-overlay.w3-hide-large(onclick='w3_close()', style='cursor:pointer', title='close side menu')
+    .w3-main(style='margin-left:250px')
+      .w3-row.w3-padding-64
+        .w3-twothird.w3-container
+          h1.w3-text-teal Heading
+          p This is a sample main page. Some links and tabs are for aesthetics only.
+      .w3-row.w3-padding-64
+        .w3-twothird.w3-container
+          h1.w3-text-teal Heading
+          p This is a sample main page. Some links and tabs are for aesthetics only.
+    
+    //- br 
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
+    //- br
