--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,7 +46,7 @@ html
             a.w3-button.w3-hover-black(href='#') »
       
         footer#myFooter
-          .w3-container.w3-theme-l2(style='top=900px')
+          .w3-container.w3-theme-l2
             h4(style='text-align:center') PureCloud Dialer
           .w3-container.w3-theme-l1
             p(style='text-align:center') Genesys Development Support
