--- a/views/index.jade
+++ b/views/index.jade
@@ -6,14 +6,27 @@ block content
   link(rel='stylesheet', href='https://www.w3schools.com/lib/w3-theme-black.css')
   link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto')
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+
   body    
     #myOverlay.w3-overlay.w3-hide-large(onclick='w3_close()', style='cursor:pointer', title='close side menu')
     .w3-main(style='margin-left:250px')
-      .w3-row.w3-padding-64
+      .w3-row.w3-padding-16
         .w3-twothird.w3-container
           h1.w3-text-teal Heading
           p This is a sample main page. Some links and tabs are for aesthetics only.
-      .w3-row.w3-padding-64
+      .w3-row.w3-padding-16
+        .w3-twothird.w3-container
+          h1.w3-text-teal Heading
+          p This is a sample main page. Some links and tabs are for aesthetics only.
+      .w3-row.w3-padding-16
+        .w3-twothird.w3-container
+          h1.w3-text-teal Heading
+          p This is a sample main page. Some links and tabs are for aesthetics only.
+      .w3-row.w3-padding-16
+        .w3-twothird.w3-container
+          h1.w3-text-teal Heading
+          p This is a sample main page. Some links and tabs are for aesthetics only.
+      .w3-row.w3-padding-16
         .w3-twothird.w3-container
           h1.w3-text-teal Heading
           p This is a sample main page. Some links and tabs are for aesthetics only.
