--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
     link(rel='stylesheet', href='https://www.w3schools.com/lib/w3-theme-black.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+    
     body
       .w3-top
         .w3-bar.w3-theme.w3-top.w3-left-align.w3-large
@@ -36,16 +37,17 @@ html
     
       #myOverlay.w3-overlay.w3-hide-large(onclick='w3_close()', style='cursor:pointer', title='close side menu')
       .w3-main(style='margin-left:250px')      
-        .w3-center.w3-padding-32
-          .w3-bar
-            a.w3-button.w3-black(href='#') 1
-            a.w3-button.w3-hover-black(href='#') 2
-            a.w3-button.w3-hover-black(href='#') 3
-            a.w3-button.w3-hover-black(href='#') 4
-            a.w3-button.w3-hover-black(href='#') 5
-            a.w3-button.w3-hover-black(href='#') »
-      
         footer#myFooter
+          #myOverlay.w3-overlay.w3-hide-large(onclick='w3_close()', style='cursor:pointer', title='close side menu')
+          .w3-main(style='margin-left:250px')
+            .w3-center
+              .w3-bar
+                a.w3-button.w3-black(href='#') 1
+                a.w3-button.w3-hover-black(href='#') 2
+                a.w3-button.w3-hover-black(href='#') 3
+                a.w3-button.w3-hover-black(href='#') 4
+                a.w3-button.w3-hover-black(href='#') 5
+                a.w3-button.w3-hover-black(href='#') »
           .w3-container.w3-theme-l2
             h4(style='text-align:center') PureCloud Dialer
           .w3-container.w3-theme-l1
