--- a/views/layout.jade
+++ b/views/layout.jade
@@ -52,7 +52,8 @@ html
             h4(style='text-align:center') PureCloud Dialer
           .w3-container.w3-theme-l1
             p(style='text-align:center') Genesys Development Support
-            
+      
+      script(src="event_handlers.js")
       script.
         // Get the Sidebar
         var mySidebar = document.getElementById("mySidebar");
