--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,7 @@ html
             i.fa.fa-bars
           a.w3-bar-item.w3-button.w3-theme-l1(href='/')
             img(src="/images/genesys_monogram_detail.png", width='50' height='50' alt="genesys.png")
-          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='contactlist') Contact List
+          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='https://localhost/contactlist') Contact List
           a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='#') Campaigns
           a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='#') News
           a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='#') Contact
