--- a/views/contactlist.jade
+++ b/views/contactlist.jade
@@ -46,8 +46,7 @@ block content
                     td(style="display: none")
                       label(style="display: none")= contact._id
                     td
-                      a(href="../contact/"+contact._id)= contact.FirstName
-                      label= contact.LastName + ", " + contact.FirstName
+                      a(href="../contact/"+contact._id)= contact.LastName + ", " + contact.FirstName
                     td(style="display: none")
                       label= contact.FirstName
                     td(style="display: none")
