--- a/views/callLog.jade
+++ b/views/callLog.jade
@@ -15,20 +15,20 @@ block content
                     td.leftSide
                       label Name
                     td.rightSide
-                      label= contact.name
+                      label= callLog.name
                   tr
                     td.leftSide
                       label Assigned to
                     td.rightSide
-                      label= contact.assignedTo
+                      label= callLog.assignedTo
                   tr
                     td.leftSide
                       label Date
                     td.rightSide
-                      label= contact.date
+                      label= callLog.date
                   tr
                     td.leftSide
                       label Comments
                     td.rightSide
-                      label= contact.comments
+                      label= callLog.comments
                     
