Add call log link to layout template

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,7 +30,7 @@ html
           i.fa.fa-remove
         h4.w3-bar-item
           b Menu
-        a.w3-bar-item.w3-button.w3-hover-black(href='#') Call Logs
+        a.w3-bar-item.w3-button.w3-hover-black(href='/call-log') Call Logs
         a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
         a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
         a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
