--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,7 +30,7 @@ html
           i.fa.fa-remove
         h4.w3-bar-item
           b Menu
-        a.w3-bar-item.w3-button.w3-hover-black(href='#') Call Logs
+        a.w3-bar-item.w3-button.w3-hover-black(href='https://localhost/callLogs') Call Logs
         a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
         a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
         a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
@@ -53,6 +53,7 @@ html
           .w3-container.w3-theme-l1
             p(style='text-align:center') Genesys Development Support
       
+      script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
       script(src="event_handlers.js")
       script.
         // Get the Sidebar
