--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,7 @@ table {
 
 table, th, td {
   border: 1px solid #9aa;
+  font-size: 12px;
 }
 
 th, td {
@@ -36,7 +37,6 @@ th, td {
 
 input {
   padding: 5px;
-  /* margin: 5px; */
 }
 
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
