Reconstructed Contact List Page

--- a/views/callLogs.jade
+++ b/views/callLogs.jade
@@ -6,7 +6,7 @@ block content
     .w3-main(style='margin-left:250px')
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          h1.w3-text-teal Call Logs
+          h1.w3-text-deep-orange Call Logs
           div
             table
               thead
