--- a/views/contactPage.jade
+++ b/views/contactPage.jade
@@ -2,30 +2,61 @@ extends layout
 
 block content
   body    
+    script(src="../event_handlers.js")
     #myOverlay.w3-overlay.w3-hide-large(onclick='w3_close()', style='cursor:pointer', title='close side menu')
     .w3-main(style='margin-left:250px')
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          h1.w3-text-teal= contact.FirstName + ' ' + contact.LastName
+          h1.w3-text-deep-orange Add Contact
+          div(style="display: inline-block; margin: 5px; width: 800px")
+            div
+              div
+                label= "First Name: "
+                input#FirstName(type="text", placeholder="First Name", style="margin: 5px; margin-left: 20px")
+              div
+                label= "Last Name: "
+                input#LastName(type="text", placeholder="Last Name", style="margin: 5px; margin-left: 20px")
+              div
+                label= "Cell Phone: "
+                input#CellPhone(type="text", placeholder="Cell Phone", style="margin: 5px; margin-left: 20px")
+              div
+                label= "Home Phone: "
+                input#HomePhone(type="text", placeholder="Home Phone", style="margin: 5px")
+              div
+                label= "Company: "
+                input#Company(type="text", placeholder="Company", style="margin: 5px; margin-left: 28px")
+              div
+                label= "Email: "
+                input#Email(type="text", placeholder="Email", style="margin: 5px; margin-left: 58px")
+              div
+                label= "Contact List: "
+                input#ContactList(type="text", value=page, disabled=true, style="margin: 5px; margin-left: 10px")
+              div
+                button#btnAdd(onclick="createContact()", style="margin: 5px; margin-left: 280px") Add
+        .w3-twothird.w3-container
+          h1.w3-text-deep-orange= page + " Contacts"
           div
             table
+              thead
+                tr: th Name
+                  th Company
+                  th Home Phone
+                  th Cell Phone
+                  th Email
+                  th Contact List
               tbody
+                each row in contact
                   tr
-                    td.leftSide
-                      label
-                        b Company
-                    td.rightSide
-                      label= contact.Company
-                  tr
-                    td.leftSide
-                      label 
-                        b Number
-                    td.rightSide
-                      a(id='clickToDial' onclick="clickToDial(\'" + contact.Phone + "\')" num=contact.Phone href="#")= contact.Phone
-                  tr
-                    td.leftSide
-                      label
-                        b Email
-                    td.rightSide
-                      a(href="mailto:#{contact.Email}" class="tooltip")= contact.Email
+                    td
+                      label= row.LastName + ", " + row.FirstName
+                    td
+                      label= row.Company
+                    td
+                      a(id='clickToDial' onclick="clickToDial(\'" + row.HomePhone + "\')" num=row.Phone href="#")= row.HomePhone
+                    td
+                      a(id='clickToDial' onclick="clickToDial(\'" + row.CellPhone + "\')" num=row.Phone href="#")= row.CellPhone
+                    td
+                      a(href="mailto:#{row.Email}" class="tooltip")= row.Email
                         span(class="tooltiptext") Email
+                    td
+                      label= row.ContactList
