--- a/views/contactlist.jade
+++ b/views/contactlist.jade
@@ -6,56 +6,78 @@ block content
     .w3-main(style='margin-left:250px')
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          h1.w3-text-teal Add New Contact
-          form#formAddContact(name="addcontact",method="post",action="/addcontact")
-            div(style="display: inline-block; margin: 5px; width: 400px")
+          h1.w3-text-deep-orange Create Contact List
+          div(style="display: inline-block; margin: 5px; width: 800px")
+            div
+              label= "Contact List Name: "
+              input#contactName(type="text", placeholder="Contact List Name", style="margin: 5px")
+            span
+              div(style="display: inline-block; vertical-align: top")
+                label= "Column Names: "
+              div(style="display: inline-block; margin-left: 35px")
+                table
+                  thead
+                    tr: th Column Name
+                      th Cell
+                      th Home
+                  tbody
+                    tr
+                      td
+                        input#input1(type="text", placeholder="Column Name")
+                      td
+                        input#input1cell(type="checkbox")
+                      td
+                        input#input1home(type="checkbox")
+                    tr
+                      td
+                        input#input2(type="text", placeholder="Column Name")
+                      td
+                        input#input2cell(type="checkbox")
+                      td
+                        input#input2home(type="checkbox")
+                    tr
+                      td
+                        input#input3(type="text", placeholder="Column Name")
+                      td
+                        input#input3cell(type="checkbox")
+                      td
+                        input#input3home(type="checkbox")
+                    tr
+                      td
+                        input#input4(type="text", placeholder="Column Name")
+                      td
+                        input#input4cell(type="checkbox")
+                      td
+                        input#input4home(type="checkbox")
+                    tr
+                      td
+                        input#input5(type="text", placeholder="Column Name")
+                      td
+                        input#input5cell(type="checkbox")
+                      td
+                        input#input5home(type="checkbox")
+                    tr
+                      td
+                        input#input6(type="text", placeholder="Column Name")
+                      td
+                        input#input6cell(type="checkbox")
+                      td
+                        input#input6home(type="checkbox")
               div
-                label= "First Name: "
-                input#inputFName(type="text", placeholder="First Name", name="fName", style="margin: 5px")
-              div
-                label= "Last Name: "
-                input#inputLName(type="text", placeholder="Last Name", name="lName", style="margin: 5px")
-              div
-                label= "Company: "
-                input#inputCompany(type="text", placeholder="Company", name="company", style="margin: 5px; margin-left: 13px")
-            div(style="display: inline-block; margin: 5px; width: 400px")
-              div
-                label= "Phone: "
-                input#inputPhone(type="text", placeholder="Phone", name="phone", style="margin: 5px")
-              div
-                label= "Email: "
-                input#inputEmail(type="text", placeholder="Email", name="email", style="margin: 5px; margin-left: 10px")
-              div
-                button#btnSubmit(type="submit", style="margin: 5px; margin-left: 235px") Add
+                button#btnSubmit(onclick="createContactList()", style="margin: 5px; margin-left: 380px") Add
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          h1.w3-text-teal Contact List
+          h1.w3-text-deep-orange Contact List
           div
             table
               thead
                 tr: th(style="display: none") _id
                   th Name
-                  th(style="display: none") First Name
-                  th(style="display: none") Last Name
-                  th(style="display: none") Company
-                  th Phone
-                  th Email
+                  th Contact List Id
               tbody
                 each contact, i in contactlist
                   tr
-                    td(style="display: none")
-                      label(style="display: none")= contact._id
                     td
-                      a(href="../contact/"+contact._id)= contact.LastName + ", " + contact.FirstName
-                    td(style="display: none")
-                      label= contact.FirstName
-                    td(style="display: none")
-                      label= contact.LastName
-                    td(style="display: none")
-                      label= contact.Company
+                      a(href="../contact/"+contact._id.ContactListName)= contact._id.ContactListName
                     td
-                      a(id='clickToDial' class="tooltip" onclick="clickToDial(" + contact.Phone + ")" num=contact.Phone href="#")= contact.Phone
-                        span(class="tooltiptext") Click to Dial
-                    td
-                      a(href="mailto:#{contact.Email}" class="tooltip")= contact.Email
-                        span(class="tooltiptext") Email
+                      label= contact._id.ContactListId
