--- a/views/index.jade
+++ b/views/index.jade
@@ -12,21 +12,13 @@ block content
     .w3-main(style='margin-left:250px')
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          h1.w3-text-teal Heading
-          p This is a sample main page. Some links and tabs are for aesthetics only.
+          h1.w3-text-deep-orange PureCloud Dialer
+          p This is a sample project using PureCloud Embeddable Framework and PureCloud SDK. This project is written in node.js using Express and MongoDB.
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          h1.w3-text-teal Heading
-          p This is a sample main page. Some links and tabs are for aesthetics only.
+          h1.w3-text-deep-orange PureCloud Embeddable Framework
+          p Different functions of the PureCloud Embeddable Framework are used in this project such as Click to Dial, Screen Pop Up and Process Call Logs.
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          h1.w3-text-teal Heading
-          p This is a sample main page. Some links and tabs are for aesthetics only.
-      .w3-row.w3-padding-16
-        .w3-twothird.w3-container
-          h1.w3-text-teal Heading
-          p This is a sample main page. Some links and tabs are for aesthetics only.
-      .w3-row.w3-padding-16
-        .w3-twothird.w3-container
-          h1.w3-text-teal Heading
-          p This is a sample main page. Some links and tabs are for aesthetics only.
+          h1.w3-text-deep-orange PureCloud SDK
+          p This application shows how PureCloud APIs can be called from the client. Outbound APIs are used in ths project such as creating a contact list, adding contacts to a contact list and creating a campaign.
