Add Campaign List Page with Queue and Contact List Dropdown

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,9 +20,9 @@ html
             i.fa.fa-bars
           a.w3-bar-item.w3-button.w3-theme-l1(href='/')
             img(src="/images/genesys_monogram_detail.png", width='50' height='50' alt="genesys.png")
-          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='https://localhost/contactlist') Contact List
-          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='https://localhost/contacts') Contacts
-          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='#') Campaigns
+          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/contactlist') Contact List
+          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/contacts') Contacts
+          a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/campaigns') Campaigns
           a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='#') About Us
     
       nav#mySidebar.w3-sidebar.w3-bar-block.w3-collapse.w3-large.w3-theme-l5.w3-animate-left
