--- a/views/campaignlist.jade
+++ b/views/campaignlist.jade
@@ -1,12 +1,47 @@
 extends layout
 
 block content
-  title title
-
-  body    
+  body
     #myOverlay.w3-overlay.w3-hide-large(onclick='w3_close()', style='cursor:pointer', title='close side menu')
     .w3-main(style='margin-left:250px')
       .w3-row.w3-padding-16
         .w3-twothird.w3-container
-          each user, i in users
-            p= user.name
+          h1.w3-text-deep-orange Create Campaign
+          div(style="display: inline-block; margin: 5px; width: 800px")
+            div
+              label= "Campaign Name: "
+              input#campaignName(type="text", placeholder="Campaign Name", style="margin: 5px")
+            div
+              label= "Contact List: "
+              select#contactList
+                each contactList, i in contactLists
+                  option= contactList
+            div
+              label= "Queue"
+              select#outBoundQueue
+                each queue, i in queues
+                  option= queue
+            div
+              label= "Caller Name: "
+              input#callerName(type="text", placeholder="Caller Name", style="margin: 5px")
+            div
+              label= "Caller Address: "
+              input#callerAddress(type="text", placeholder="Caller Address", style="margin: 5px")
+            div
+              button#btnSubmit(onclick="createCampaign()", style="margin: 5px; margin-left: 380px") Add
+      .w3-row.w3-padding-16
+        .w3-twothird.w3-container
+          h1.w3-text-deep-orange Campaign List
+          //- div
+          //-   table
+          //-     thead
+          //-       tr: th(style="display: none") _id
+          //-         th Name
+          //-         th Contact List Id
+          //-     tbody
+          //-       each contact, i in contactlist
+          //-         tr
+          //-           td
+          //-             a(href="../contact/"+contact._id.ContactListName)= contact._id.ContactListName
+          //-           td
+          //-             label= contact._id.ContactListId
