--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ body > div > iframe {
 }
 
 body {
-  padding: 50px;
+  padding-top: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -39,7 +39,10 @@ input {
   padding: 5px;
 }
 
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
+html,body,h1,h2,h3,h4,h5,h6 {
+  font-family: "Roboto", sans-serif;
+}
+
 .w3-sidebar {
   z-index: 3;
   width: 250px;
@@ -48,11 +51,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   height: inherit;
 }
 
+#myBody {
+  padding: 10px;
+  padding-bottom: 145px;
+  height: 100%;
+}
+
 #myFooter{
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 145px;
+  height: 85px;
 }
 
 .tooltip {
