--- a/views/contactlist.jade
+++ b/views/contactlist.jade
@@ -1,83 +1,81 @@
 extends layout
 
 block content
-  body
-    #myOverlay.w3-overlay.w3-hide-large(onclick='w3_close()', style='cursor:pointer', title='close side menu')
-    .w3-main(style='margin-left:250px')
-      .w3-row.w3-padding-16
-        .w3-twothird.w3-container
-          h1.w3-text-deep-orange Create Contact List
-          div(style="display: inline-block; margin: 5px; width: 800px")
-            div
-              label= "Contact List Name: "
-              input#contactName(type="text", placeholder="Contact List Name", style="margin: 5px")
-            span
-              div(style="display: inline-block; vertical-align: top")
-                label= "Column Names: "
-              div(style="display: inline-block; margin-left: 35px")
-                table
-                  thead
-                    tr: th Column Name
-                      th Cell
-                      th Home
-                  tbody
-                    tr
-                      td
-                        input#input1(type="text", placeholder="Column Name")
-                      td
-                        input#input1cell(type="checkbox")
-                      td
-                        input#input1home(type="checkbox")
-                    tr
-                      td
-                        input#input2(type="text", placeholder="Column Name")
-                      td
-                        input#input2cell(type="checkbox")
-                      td
-                        input#input2home(type="checkbox")
-                    tr
-                      td
-                        input#input3(type="text", placeholder="Column Name")
-                      td
-                        input#input3cell(type="checkbox")
-                      td
-                        input#input3home(type="checkbox")
-                    tr
-                      td
-                        input#input4(type="text", placeholder="Column Name")
-                      td
-                        input#input4cell(type="checkbox")
-                      td
-                        input#input4home(type="checkbox")
-                    tr
-                      td
-                        input#input5(type="text", placeholder="Column Name")
-                      td
-                        input#input5cell(type="checkbox")
-                      td
-                        input#input5home(type="checkbox")
-                    tr
-                      td
-                        input#input6(type="text", placeholder="Column Name")
-                      td
-                        input#input6cell(type="checkbox")
-                      td
-                        input#input6home(type="checkbox")
-              div
-                button#btnSubmit(onclick="createContactList()", style="margin: 5px; margin-left: 380px") Add
-      .w3-row.w3-padding-16
-        .w3-twothird.w3-container
-          h1.w3-text-deep-orange Contact List
+  div#myBody
+    .w3-row.w3-padding-16
+      .w3-twothird.w3-container
+        h1.w3-text-deep-orange Create Contact List
+        div(style="display: inline-block; margin: 5px; width: 800px")
           div
-            table
-              thead
-                tr: th(style="display: none") _id
-                  th Name
-                  th Contact List Id
-              tbody
-                each contact, i in contactlist
+            label= "Contact List Name: "
+            input#contactName(type="text", placeholder="Contact List Name", style="margin: 5px")
+          span
+            div(style="display: inline-block; vertical-align: top")
+              label= "Column Names: "
+            div(style="display: inline-block; margin-left: 35px")
+              table
+                thead
+                  tr: th Column Name
+                    th Cell
+                    th Home
+                tbody
                   tr
                     td
-                      a(href="../contact/"+contact._id.ContactListName)= contact._id.ContactListName
+                      input#input1(type="text", placeholder="Column Name")
                     td
-                      label= contact._id.ContactListId
+                      input#input1cell(type="checkbox")
+                    td
+                      input#input1home(type="checkbox")
+                  tr
+                    td
+                      input#input2(type="text", placeholder="Column Name")
+                    td
+                      input#input2cell(type="checkbox")
+                    td
+                      input#input2home(type="checkbox")
+                  tr
+                    td
+                      input#input3(type="text", placeholder="Column Name")
+                    td
+                      input#input3cell(type="checkbox")
+                    td
+                      input#input3home(type="checkbox")
+                  tr
+                    td
+                      input#input4(type="text", placeholder="Column Name")
+                    td
+                      input#input4cell(type="checkbox")
+                    td
+                      input#input4home(type="checkbox")
+                  tr
+                    td
+                      input#input5(type="text", placeholder="Column Name")
+                    td
+                      input#input5cell(type="checkbox")
+                    td
+                      input#input5home(type="checkbox")
+                  tr
+                    td
+                      input#input6(type="text", placeholder="Column Name")
+                    td
+                      input#input6cell(type="checkbox")
+                    td
+                      input#input6home(type="checkbox")
+            div
+              button#btnSubmit(onclick="createContactList()", style="margin: 5px; margin-left: 380px") Add
+    .w3-row.w3-padding-16
+      .w3-twothird.w3-container
+        h1.w3-text-deep-orange Contact List
+        div
+          table
+            thead
+              tr: th(style="display: none") _id
+                th Name
+                th Contact List Id
+            tbody
+              each contact, i in contactlist
+                tr
+                  td
+                    a(href="../contact/"+contact._id.ContactListName)= contact._id.ContactListName
+                  td
+                    label= contact._id.ContactListId
