--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,7 +58,8 @@ html,body,h1,h2,h3,h4,h5,h6 {
 }
 
 #myFooter{
-  position: absolute;
+  /* position: absolute; */
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 85px;
