--- a/views/contactPage.jade
+++ b/views/contactPage.jade
@@ -2,59 +2,47 @@ extends layout
 
 block content
   div#myBody
+    link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="../event_handlers.js")
     .w3-row.w3-padding-16
       .w3-twothird.w3-container
         h1.w3-text-deep-orange Add Contact
         div(style="display: inline-block; margin: 5px; width: 800px")
           div
-            div
-              label= "First Name: "
-              input#FirstName(type="text", placeholder="First Name", style="margin: 5px; margin-left: 20px")
-            div
-              label= "Last Name: "
-              input#LastName(type="text", placeholder="Last Name", style="margin: 5px; margin-left: 20px")
-            div
-              label= "Cell Phone: "
-              input#CellPhone(type="text", placeholder="Cell Phone", style="margin: 5px; margin-left: 20px")
-            div
-              label= "Home Phone: "
-              input#HomePhone(type="text", placeholder="Home Phone", style="margin: 5px")
-            div
-              label= "Company: "
-              input#Company(type="text", placeholder="Company", style="margin: 5px; margin-left: 28px")
-            div
-              label= "Email: "
-              input#Email(type="text", placeholder="Email", style="margin: 5px; margin-left: 58px")
+            each column in columns
+              div
+                label= column + ": "
+                input(type="text", id=column.replace(/\s+/g, ''), placeholder=column, style="margin: 5px")
             div
               label= "Contact List: "
               input#ContactList(type="text", value=page, disabled=true, style="margin: 5px; margin-left: 10px")
             div
-              button#btnAdd(onclick="createContact()", style="margin: 5px; margin-left: 280px") Add
+              button#btnAdd(onclick="createContact(\'" + page + "\')", style="margin: 5px; margin-left: 280px") Add
+
       .w3-twothird.w3-container
         h1.w3-text-deep-orange= page + " Contacts"
+        - var column = columns
         div
           table
             thead
-              tr: th Name
-                th Company
-                th Home Phone
-                th Cell Phone
-                th Email
-                th Contact List
+              each col in columns
+                td= col
             tbody
               each row in contact
                 tr
-                  td
-                    label= row.LastName + ", " + row.FirstName
-                  td
-                    label= row.Company
-                  td
-                    a(id='clickToDial' onclick="clickToDial(\'" + row.HomePhone + "\')" num=row.Phone href="#")= row.HomePhone
-                  td
-                    a(id='clickToDial' onclick="clickToDial(\'" + row.CellPhone + "\')" num=row.Phone href="#")= row.CellPhone
-                  td
-                    a(href="mailto:#{row.Email}" class="tooltip")= row.Email
-                      span(class="tooltiptext") Email
-                  td
-                    label= row.ContactList
+                  each col in column
+                    td
+                      - var col1 = col.replace(/\s+/g, '');
+                      - var regPhone = RegExp('Phone');
+                      - var regEmail = RegExp('com');
+                      - var isPhone = regPhone.test(col1);
+                      - var isEmail = regEmail.test(row[col1]);
+
+                      if isPhone
+                        a(id='clickToDial' onclick="clickToDial(\'" + row[col1] + "\')" num=row[col1] href="#" class="tooltip")= row[col1]
+                          span(class="tooltiptext") Call
+                      else if isEmail
+                        a(href="mailto:" + row[col1] class="tooltip")= row[col1]
+                          span(class="tooltiptext") Email
+                      else
+                        label= row[col1]
