--- a/views/contacts.jade
+++ b/views/contacts.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   div#myBody
+    link(rel='stylesheet', href='/stylesheets/style.css')
     .w3-row.w3-padding-16
       .w3-twothird.w3-container
         h1.w3-text-deep-orange Contacts
