--- a/views/contactPage.jade
+++ b/views/contactPage.jade
@@ -10,14 +10,14 @@ block content
         div(style="display: inline-block; margin: 5px; width: 800px")
           div
             each column in columns
-              div
+              div.block
                 label= column + ": "
                 input(type="text", id=column.replace(/\s+/g, ''), placeholder=column, style="margin: 5px")
-            div
+            div.block
               label= "Contact List: "
-              input#ContactList(type="text", value=page, disabled=true, style="margin: 5px; margin-left: 10px")
+              input#ContactList(type="text", value=page, disabled=true, style="margin: 5px; margin-left: 5px")
             div
-              button#btnAdd(onclick="createContact(\'" + page + "\')", style="margin: 5px; margin-left: 280px") Add
+              button#btnAdd(onclick="createContact(\'" + page + "\')", style="margin: 5px; margin-left: 275px") Add
 
       .w3-twothird.w3-container
         h1.w3-text-deep-orange= page + " Contacts"
