--- a/views/contactlist.jade
+++ b/views/contactlist.jade
@@ -2,17 +2,18 @@ extends layout
 
 block content
   div#myBody
+    link(rel='stylesheet', href='/stylesheets/style.css')
     .w3-row.w3-padding-small
       .w3-twothird.w3-container
         h1.w3-text-deep-orange Create Contact List
         div(style="display: inline-block; margin: 5px; width: 800px")
-          div
+          div.block
             label= "Contact List Name: "
             input#contactName(type="text", placeholder="Contact List Name", style="margin: 5px")
           span
-            div(style="display: inline-block; vertical-align: top")
+            div.block(style="display: inline-block; vertical-align: top")
               label= "Column Names: "
-            div(style="display: inline-block; margin-left: 35px")
+            div(style="display: inline-block; margin-left: 5px")
               table#InputTable
                 tr
                   td Column Name
@@ -25,9 +26,9 @@ block content
                     input#inputCell0(type="checkbox")
                   td
                     input#inputHome0(type="checkbox")
-            div(style="display: inline-block")
-              button#btnAdd(onclick="insRow()", style="margin: 5px; margin-left: 155px") Add Row
-              button#btnSave(onclick="createContactList()", style="margin: 5px; margin-left: 125px") Save
+            div
+              button#btnAdd(onclick="insRow()", style="margin: 5px; margin-left: 145px") Add Row
+              button#btnSave(onclick="createContactList()", style="margin: 5px; margin-left: 115px") Save
     .w3-row.w3-padding-small
       .w3-twothird.w3-container
         h1.w3-text-deep-orange Contact List
