Additional styling changes

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,7 @@ html
         a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/contactlist') Contact List
         a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/contacts') Contacts
         a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/campaigns') Campaigns
+        a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/callLogs') Call Logs
         a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='#') About Us
     
     nav#mySidebar.w3-sidebar.w3-bar-block.w3-collapse.w3-large.w3-theme-l5.w3-animate-left
@@ -28,7 +29,7 @@ html
         i.fa.fa-remove
       h4.w3-bar-item
         b Menu
-      a.w3-bar-item.w3-button.w3-hover-black(href='https://localhost/callLogs') Call Logs
+      a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
       a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
       a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
       a.w3-bar-item.w3-button.w3-hover-black(href='#') Link
