--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,11 +58,10 @@ html,body,h1,h2,h3,h4,h5,h6 {
 }
 
 #myFooter{
-  /* position: absolute; */
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
-  height: 85px;
+  height: 70px;
 }
 
 .tooltip {
