--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html
       .w3-bar.w3-theme.w3-top.w3-left-align.w3-large
         a.w3-bar-item.w3-button.w3-right.w3-hide-large.w3-hover-white.w3-large.w3-theme-l1(href='javascript:void(0)', onclick='w3_open()')
           i.fa.fa-bars
-        a.w3-bar-item.w3-button.w3-theme-l1(href='/')
+        a.w3-bar-item.w3-button.w3-theme(href='/')
           img(src="/images/genesys_monogram_detail.png", width='50' height='50' alt="genesys.png")
         a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/contactlist') Contact List
         a.w3-bar-item.w3-button.w3-hide-small.w3-hover-white(href='/contacts') Contacts
